Fix outline on mobile phones

--- a/styles/main.css
+++ b/styles/main.css
@@ -240,6 +240,7 @@
   padding: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  outline: 0;
 }
 
 html {
